[package]
name = "namefyi"
version = "0.1.1"
edition = "2021"
authors = ["FYIPedia"]
description = "Korean romanization, Five Elements, and CJK stroke lookup — async API client for namefyi.com."
license = "MIT"
repository = "https://github.com/fyipedia/namefyi-rs"
homepage = "https://namefyi.com"
documentation = "https://docs.rs/namefyi"
readme = "README.md"
keywords = ["name", "korean", "romanization", "hanja", "five-elements"]
categories = ["api-bindings", "data-structures"]

exclude = ["target/", "demo.gif", "demo.tape"]

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
